--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "cache-data",
+  "name": "@chadkluck/cache-data",
   "version": "1.0.0",
   "description": "Cache data from an API endpoint or application process using AWS S3 and DynamoDb",
   "author": "Chad Leigh Kluck (https://chadkluck.net)",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chadkluck/cache-data.git"
+    "url": "git+https://github.com/chadkluck/cache-data.git"
   },
   "main": "src/index.js",
   "directories": {
@@ -34,5 +34,9 @@
     "s3",
     "DynamoDb",
     "aws"
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/chadkluck/cache-data/issues"
+  },
+  "homepage": "https://github.com/chadkluck/cache-data#readme"
 }
