chore: preparing for aws-sdk v3

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "object-hash": "^3.0.0"
   },
   "devDependencies": {
+    "@aws-sdk/client-dynamodb": "^3.398.0",
+    "@aws-sdk/client-s3": "^3.400.0",
     "aws-sdk": "^2.1440.0",
     "chai": "^4.3.8",
     "chai-http": "^4.3.0",
