--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "aws-sdk": "^2.1440.0",
     "chai": "^4.3.8",
     "chai-http": "^4.3.0",
-    "mocha": "^10.2.0"
+    "lambda-tester": "^4.0.1",
+    "mocha": "^10.2.0",
+    "proxyquire": "^2.1.3",
+    "sinon": "^15.2.0"
   },
   "scripts": {
     "test": "mocha"
