--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
   },
   "dependencies": {
     "moment-timezone": "^0.5.43",
-    "object-hash": "^3.0.0"
-  },
-  "devDependencies": {
+    "object-hash": "^3.0.0",
     "@aws-sdk/client-ssm": "^3.410.0",
     "@aws-sdk/client-dynamodb": "^3.410.0",
-    "@aws-sdk/client-s3": "^3.412.0",
-    "aws-sdk": "^2.1457.0",
+    "@aws-sdk/client-s3": "^3.412.0"
+  },
+  "devDependencies": {
     "chai": "^4.3.8",
     "chai-http": "^4.3.0",
     "lambda-tester": "^4.0.1",
