--- a/package.json
+++ b/package.json
@@ -17,18 +17,13 @@
   },
   "dependencies": {
     "moment-timezone": "^0.5.43",
-    "object-hash": "^3.0.0",
-    "@aws-sdk/client-ssm": "^3.410.0",
-    "@aws-sdk/client-dynamodb": "^3.410.0",
-    "@aws-sdk/client-s3": "^3.412.0"
+    "object-hash": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.8",
     "chai-http": "^4.3.0",
     "lambda-tester": "^4.0.1",
-    "mocha": "^10.2.0",
-    "proxyquire": "^2.1.3",
-    "sinon": "^15.2.0"
+    "mocha": "^10.2.0"
   },
   "scripts": {
     "test": "mocha"
