--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "object-hash": "^3.0.0"
   },
   "devDependencies": {
+    "@aws-sdk/client-dynamodb": "^3.410.0",
+    "@aws-sdk/client-s3": "^3.412.0",
+    "@aws-sdk/client-ssm": "^3.410.0",
+    "aws-sdk": "^2.1457.0",
     "chai": "^4.3.8",
     "chai-http": "^4.3.0",
     "lambda-tester": "^4.0.1",
