--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "object-hash": "^3.0.0"
   },
   "devDependencies": {
-    "@aws-sdk/client-dynamodb": "^3.410.0",
-    "@aws-sdk/client-s3": "^3.412.0",
-    "@aws-sdk/client-ssm": "^3.410.0",
-    "aws-sdk": "^2.1457.0",
+    "@aws-sdk/client-dynamodb": "3.x",
+    "@aws-sdk/client-s3": "3.x",
+    "@aws-sdk/client-ssm": "3.x",
+    "@aws-sdk/lib-dynamodb": "3.x",
+    "aws-sdk": "2.x",
     "chai": "^4.3.8",
     "chai-http": "^4.3.0",
     "lambda-tester": "^4.0.1",
