--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@aws-sdk/client-ssm": "3.x",
     "@aws-sdk/lib-dynamodb": "3.x",
     "aws-sdk": "2.x",
-    "chai": "^5.0.0",
+    "chai": "4.x",
     "chai-http": "^4.3.0",
     "lambda-tester": "^4.0.1",
     "mocha": "^10.2.0"
