--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "aws-xray-sdk-core": "^3.6.0",
     "moment-timezone": "^0.5.43",
     "object-hash": "^3.0.0"
   },
@@ -25,10 +26,9 @@
     "@aws-sdk/client-ssm": "3.x",
     "@aws-sdk/lib-dynamodb": "3.x",
     "aws-sdk": "2.x",
-    "aws-xray-sdk-core": "^3.6.0",
-    "chai": "4.x",
-    "chai-http": "^4.3.0",
     "lambda-tester": "^4.0.1",
+    "chai": "^5.1.0",
+    "chai-http": "^4.4.0",
     "mocha": "^10.2.0"
   },
   "scripts": {
