--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@chadkluck/cache-data",
+  "name": "@63klabs/cache-data",
   "version": "1.2.1",
   "description": "Cache data from an API endpoint or application process using AWS S3 and DynamoDb",
   "author": "Chad Leigh Kluck (https://chadkluck.me)",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chadkluck/npm-chadkluck-cache-data.git"
+    "url": "git+https://github.com/63klabs/npm-cache-data.git"
   },
   "main": "src/index.js",
   "directories": {
@@ -52,7 +52,7 @@
     "AWS Lambda"
   ],
   "bugs": {
-    "url": "https://github.com/chadkluck/npm-chadkluck-cache-data/issues"
+    "url": "https://github.com/63klabs/npm-cache-data/issues"
   },
   "homepage": "https://github.com/chadkluck/npm-chadkluck-cache-data#readme"
 }
